Avoids sans-serif font getting too small in tickets table

--- a/src/onegov/org/theme/styles/tickets.scss
+++ b/src/onegov/org/theme/styles/tickets.scss
@@ -117,7 +117,6 @@ $all-ticket-icon: '\f055';
 
     td {
         vertical-align: top;
-        font-size: .875rem;
 
         .button { margin-bottom: 0; }
 
